[package]
name = "prop-amm-v2"
version = "0.1.0"
description = "Oracle fast-path demo — benchmarks an asm entrypoint that short-circuits one discriminator before the anchor dispatcher runs."
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "prop_amm_v2"

[features]
default = ["no-entrypoint", "no-log-ix-name"]
no-entrypoint = []
cpi = ["no-entrypoint", "dep:borsh"]
no-idl = []
no-log-ix-name = []
idl-build = []
# Switch tests to `anchor_v2_testing::svm()` so the SBF register-trace
# callback fires. `anchor debugger` (loose mode) auto-detects this
# feature and passes `--features profile` to cargo test.
profile = ["anchor-v2-testing/profile"]

[dependencies]
# Same production profile the other bench/v2 programs use: drop the
# `guardrails` feature so per-Deref borrow-state checks vanish; rely on
# the entrypoint to set up borrow state and the compiler for `&/&mut`
# exclusivity.
anchor-lang-v2 = { path = "../../../../lang-v2", default-features = false, features = ["alloc"] }
anchor-asm-v2-runtime = { path = "../../../../asm-v2/runtime" }
borsh = { version = "1", optional = true }
bytemuck = { version = "1", features = ["derive"] }
pinocchio = { version = "0.11", default-features = false, features = ["copy"] }
wincode = { version = "0.5", features = ["derive"] }

[build-dependencies]
anchor-asm-v2 = { path = "../../../../asm-v2" }

[dev-dependencies]
anchor-v2-testing = { path = "../../../../v2-testing" }
litesvm = "0.11"

[lints.rust.unexpected_cfgs]
level = "allow"
