[package]
name = "vault-v2"
version = "0.1.0"
description = "Anchor v2 port of the quasar vault benchmark program"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_v2"

[features]
default = ["no-log-ix-name"]
no-entrypoint = []
cpi = ["no-entrypoint", "dep:borsh"]
no-idl = []
no-log-ix-name = []
idl-build = []
profile = ["anchor-v2-testing/profile"]

[dependencies]
# Drop `guardrails` to strip ~20-CU-per-Deref runtime borrow-state checks.
# Same "production" v2 profile as hello-world-v2.
anchor-lang-v2 = { path = "../../../../lang-v2", default-features = false, features = ["alloc"] }
borsh = { version = "1", optional = true }
bytemuck = { version = "1", features = ["derive"] }
pinocchio = { version = "0.11", default-features = false, features = ["copy"] }
pinocchio-system = "0.6"
wincode = { version = "0.5", features = ["derive"] }

[dev-dependencies]
anchor-v2-testing = { path = "../../../../v2-testing" }
litesvm = "0.11"
solana-account = "3.0"

[lints.rust.unexpected_cfgs]
level = "allow"
