[package]
name = "token-2022-ext-group-pointer"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "token_2022_ext_group_pointer"

[features]
default = ["no-log-ix-name"]
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang-v2 = { path = "../../../../lang-v2", default-features = false, features = ["alloc"] }
anchor-spl-v2 = { path = "../../../../spl-v2", features = ["guardrails"] }
solana-program-error = "3.0"
wincode = { version = "0.5", features = ["derive"] }

[lints.rust.unexpected_cfgs]
level = "allow"
